Added styling to existing pages!

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,21 @@
 <% layout('layouts/boilerplate') -%>
 
 <body>
-    <h3>Listings</h3>
-    <form action="/listings/new" method="GET">
-        <button>Create new Listing</button>
-    </form>
-    <br>
-    <% for(let list of listings) {%>
-        <a href="/listings/<%=list._id%>"><%= list.title %></a>
-        <br>
-    <% } %>
+    <h3 class="abc-xyz">Listings</h3>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <% for(let list of listings) { %>
+            <div class="card" style="width: 18rem;">
+                <div class="card-image-overlay">
+                    <a href="/listings/<%= list._id %>"><img src="<%= list.image %>" class="card-img-top" alt="Listing image" style="height: 20rem"></a>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"><b><%= list.title %></b></h5>
+                    <p class="card-text">&#8377;<%= list.price.toLocaleString("en-IN") %>/night</p>
+                    <a href="<%= list.image %>" class="btn btn-dark">Expand image</a>
+                </div>
+            </div>
+        <% } %>
+    </div>
+    
+    
 </body>
