--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,32 +1,49 @@
 <% layout('layouts/boilerplate') -%>
 
-<body>
-    <h3>Create new Listing</h3>
+<div class="card mt-5 mx-auto" style="max-width: 600px">
+  <div class="card-body">
+    <h3 class="card-title text-center mb-4">Create New Listing</h3>
     <form action="/listings" method="POST">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title" required>
-        <br><br>
-
-        <label for="description">Description</label>
-        <textarea name="description" id="description" cols="30" rows="10"></textarea>
-        <br><br>
-
-        <label for="image">Image</label>
-        <input type="text" name="image" id="image">
-        <br><br>
-
-        <label for="price">Price</label>
-        <input type="number" name="price" id="price">
-        <br><br>
-
-        <label for="location">Location</label>
-        <input type="text" name="location" id="location">
-        <br><br>
-
-        <label for="country">Country</label>
-        <input type="text" name="country" id="country">
-        <br><br>
-
-        <button>Create Listing</button>
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          type="text"
+          name="title"
+          placeholder="Enter a cachy title"
+          id="title"
+          class="form-control"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
+          name="description"
+          id="description"
+          cols="30"
+          rows="5"
+          class="form-control"
+        ></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label">Image URL</label>
+        <input type="text" placeholder="enter url" name="image" id="image" class="form-control" />
+      </div>
+      <div class="mb-3">
+        <label for="price" class="form-label">Price</label>
+        <input type="number" placeholder="1500" name="price" id="price" class="form-control" />
+      </div>
+      <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input type="text" placeholder="Ladakh, Kashmir" name="location" id="location" class="form-control" />
+      </div>
+      <div class="mb-3">
+        <label for="country" class="form-label">Country</label>
+        <input type="text" placeholder="India" name="country" id="country" class="form-control" />
+      </div>
+      <div class="d-grid gap-2">
+        <button type="submit" class="btn btn-dark">Create Listing</button>
+      </div>
     </form>
-</body>
+  </div>
+</div>
