--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,16 +1,17 @@
 <% layout('layouts/boilerplate') -%>
-<body>
-    <h3><%= list.title %></h3>
-    <hr>
-    <img src="<%= list.image %>" alt="" style="width: 300px; height: 200px;">
-    <p><%= list.description %></p>
-    <p>Price: &#8377;<%= list.price.toLocaleString("en-IN") %></p>
-    <p>Location: <%= list.location %>, <%= list.country %></p>
 
-    <a href="/listings/<%= list._id %>/edit">Edit</a>
-    <br><br>
-    <form action="/listings/<%= list._id %>?_method=DELETE" method="POST">
-        <button>Delete</button>
-    </form>
-
-</body>
+<div class="card mt-5 mx-auto" style="max-width: 600px;">
+  <img src="<%= list.image %>" class="card-img-top" style="object-fit: cover; width: 100%; height: 300px; margin-left: 9rem;" alt="<%= list.title %>">
+  <div class="card-body">
+    <h3 class="card-title text-center mb-3"><%= list.title %></h3>
+    <p class="card-text"><%= list.description %></p>
+    <p class="card-text">Price: &#8377;<%= list.price.toLocaleString("en-IN") %></p>
+    <p class="card-text">Location: <%= list.location %>, <%= list.country %></p>
+    <div class="d-flex justify-content-between">
+      <a href="/listings/<%= list._id %>/edit" class="btn btn-secondary">Edit</a>
+      <form action="/listings/<%= list._id %>?_method=DELETE" method="POST">
+        <button type="submit" class="btn btn-danger">Delete</button>
+      </form>
+    </div>
+  </div>
+</div>
