--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,7 +3,7 @@
 <div class="card mt-5 mx-auto" style="max-width: 600px">
   <div class="card-body">
     <h3 class="card-title text-center mb-4">Create New Listing</h3>
-    <form action="/listings" method="POST">
+    <form action="/listings" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -14,6 +14,12 @@
           class="form-control"
           required
         />
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+        <div class="invalid-feedback">
+          Enter correct name!
+        </div>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
@@ -27,19 +33,49 @@
       </div>
       <div class="mb-3">
         <label for="image" class="form-label">Image URL</label>
-        <input type="text" placeholder="enter url" name="image" id="image" class="form-control" />
+        <input
+          type="text"
+          placeholder="enter url"
+          name="image"
+          id="image"
+          class="form-control"
+        />
       </div>
       <div class="mb-3">
         <label for="price" class="form-label">Price</label>
-        <input type="number" placeholder="1500" name="price" id="price" class="form-control" />
+        <input
+          type="number"
+          placeholder="1500"
+          name="price"
+          id="price"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">Please enter valid price!</div>
       </div>
       <div class="mb-3">
         <label for="location" class="form-label">Location</label>
-        <input type="text" placeholder="Ladakh, Kashmir" name="location" id="location" class="form-control" />
+        <input
+          type="text"
+          placeholder="Ladakh, Kashmir"
+          name="location"
+          id="location"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">Please enter valid location!</div>
       </div>
       <div class="mb-3">
         <label for="country" class="form-label">Country</label>
-        <input type="text" placeholder="India" name="country" id="country" class="form-control" />
+        <input
+          type="text"
+          placeholder="India"
+          name="country"
+          id="country"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">Enter valid country name</div>
       </div>
       <div class="d-grid gap-2">
         <button type="submit" class="btn btn-dark">Create Listing</button>
