--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,6 +15,7 @@
 <body>
     <%- include('../includes/navbar') %>
     <div class="container">
+        <%- include('../includes/flash') %>
         <%- body %>
     </div>
     <%- include('../includes/footer') %>
