--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,14 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-mountain-sun"> GetSetTrip</i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" >
+    <a class="navbar-brand" href="/"
+      ><i class="fa-solid fa-mountain-sun"> GetSetTrip</i></a
+    >
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -9,6 +16,14 @@
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listings">All listings</a>
         <a class="nav-link" href="/listings/new">Add new listings</a>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!curUser) { %>
+            <a class="nav-link" href="/signup">Signup</a>
+            <a class="nav-link" href="/login">Login</a>
+        <% } else { %>
+            <a class="nav-link" href="/logout">Logout</a>
+        <% } %>
       </div>
     </div>
   </div>
