--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -14,12 +14,8 @@
           class="form-control"
           required
         />
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Enter correct name!
-        </div>
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Enter correct name!</div>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
