--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -99,7 +99,7 @@
           <div class="invalid-feedback">Please describe your experience!</div>
         </div>
         <div class="mb-3">
-          <label for="rating" class="form-label">Rating (Out of 5)</label>
+          <!-- <label for="rating" class="form-label">Rating (Out of 5)</label>
           <input
             type="number"
             class="form-control"
@@ -108,8 +108,30 @@
             min="1"
             max="5"
             required
-          />
+          /> -->
+          <fieldset class="starability-slot">
+              <input
+                type="radio"
+                id="no-rate"
+                class="input-no-rate"
+                name="rating"
+                value="0"
+                checked
+                aria-label="No rating."
+              />
+              <input type="radio" id="first-rate1" name="rating" value="1" />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input type="radio" id="first-rate2" name="rating" value="2" />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input type="radio" id="first-rate3" name="rating" value="3" />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input type="radio" id="first-rate4" name="rating" value="4" />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input type="radio" id="first-rate5" name="rating" value="5" />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
         </div>
+
         <button type="submit" class="btn btn-dark">Post Review</button>
       </form>
       <% } else { %>
@@ -127,6 +149,7 @@
         </h5>
         <p class="card-text"><%= review.comment %></p>
         <p class="card-text">Rating: <%= review.rating %> / 5</p>
+        <p class="starability-result" data-rating="<%= review.rating %>">Rated: 3 stars</p>
         <% if(curUser && curUser._id.equals(review.author._id)) { %>
         <form
           method="POST"
