--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -28,7 +28,7 @@
 
 <div class="card mt-5 mx-auto" style="max-width: 600px">
   <img
-    src="<%= list.image %>"
+    src="<%= list.image.url %>"
     class="card-img-top"
     style="object-fit: cover; width: 100%; height: 300px; margin-left: 9rem"
     alt="<%= list.title %>"
